# releng-gerrit_to_platform

./: .coveragerc  .editorconfig  .gitlint  .gitreview  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  COMMIT_MSG.txt  CONTRIBUTING.rst  EXACT_MATCH_WORKFLOWS.md  README.rst  TESTING.md  license-header.txt  project.config  pyproject.toml  quick-notes.md  tox.ini
.github/: dependabot.yml
.github/workflows/: README.md  codeql.yaml  downstream-consumer.yaml  gerrit-verify.yaml  github2gerrit.yaml  manual-dispatch-test.yaml  release.yaml  testing.yaml
docs/: GITHUB_WORKFLOW_INPUT_LIMIT_SOLUTION.md  changelog.rst  conf.py  conf.yaml  index.rst  onboard.rst  required-vars-secrets.rst  requirements.txt  troubleshooting.rst
examples/: CHANGELOG.md  README.md  example-workflow.yml  validate-json.py  validate-json.sh
examples/workflows/: gerrit-merge.yaml  gerrit-verify-manual-dispatch.yaml  gerrit-verify.yaml  github-vanilla-verify.yaml
releasenotes/notes/: fix_required_branch_ref-5895658b99c9721b.yaml  initial_release-eb04a5f0690afc15.yaml  only-file-names-f0e5c44c8f62bca4.yaml  required_workflows-859326ccaa55da24.yaml  workflow-migration-guide-1c231711e6f84962.yaml
src/gerrit_to_platform/: __init__.py  change_merged.py  cli.py  comment_added.py  config.py  github.py  helpers.py  parrotbot.py  patchset_created.py  skeleton.py
src/gerrit_to_platform/cli/: __init__.py
tests/: conftest.py  test_change_merged.py  test_cli.py  test_comment_added.py  test_comment_added_chatops.py  test_config.py  test_github.py  test_helpers.py  test_main.py  test_parrotbot.py  test_patchset_created.py  test_skeleton.py
tests/fixtures/: github_workflow_list.json  github_workflow_list_filter_workflows_return.json  github_workflow_list_filter_workflows_return_merge.json  github_workflow_list_get_workflows_return.json  github_workflow_list_required_filter_workflows_return.json  limited_replication_remotes_return_github.json  limited_replication_remotes_return_gitlab.json  replication.config  replication_remotes_return.json  testconfig.ini
